@@ -662,72 +662,69 @@ public class Fetcher2 extends Configured implements MapRunnable {
       datum.setFetchTime(System.currentTimeMillis());
       if (pstatus != null) datum.getMetaData().put(Nutch.WRITABLE_PROTO_STATUS_KEY, pstatus);
 
-      if (content == null) {
-        String url = key.toString();
-        content = new Content(url, url, new byte[0], "", new Metadata(), this.conf);
-      }
-      Metadata metadata = content.getMetadata();
-      // add segment to metadata
-      metadata.set(Nutch.SEGMENT_NAME_KEY, segmentName);
-      // add score to content metadata so that ParseSegment can pick it up.
-      try {
-        scfilters.passScoreBeforeParsing(key, datum, content);
-      } catch (Exception e) {
-        if (LOG.isWarnEnabled()) {
-          e.printStackTrace(LogUtil.getWarnStream(LOG));
-          LOG.warn("Couldn't pass score, url " + key + " (" + e + ")");
-        }
-      }
-
-      /* Note: Fetcher will only follow meta-redirects coming from the
-       * original URL. */ 
       ParseResult parseResult = null;
-      if (parsing && status == CrawlDatum.STATUS_FETCH_SUCCESS) {
+      if (content != null) {
+        Metadata metadata = content.getMetadata();
+        // add segment to metadata
+        metadata.set(Nutch.SEGMENT_NAME_KEY, segmentName);
+        // add score to content metadata so that ParseSegment can pick it up.
         try {
-          parseResult = this.parseUtil.parse(content);
+          scfilters.passScoreBeforeParsing(key, datum, content);
         } catch (Exception e) {
-          LOG.warn("Error parsing: " + key + ": " + StringUtils.stringifyException(e));
+          if (LOG.isWarnEnabled()) {
+            e.printStackTrace(LogUtil.getWarnStream(LOG));
+            LOG.warn("Couldn't pass score, url " + key + " (" + e + ")");
+          }
         }
+        /* Note: Fetcher will only follow meta-redirects coming from the
+         * original URL. */ 
+        if (parsing && status == CrawlDatum.STATUS_FETCH_SUCCESS) {
+          try {
+            parseResult = this.parseUtil.parse(content);
+          } catch (Exception e) {
+            LOG.warn("Error parsing: " + key + ": " + StringUtils.stringifyException(e));
+          }
 
-        if (parseResult != null) {
-          for (Entry<Text, Parse> entry : parseResult) {
-            Text url = entry.getKey();
-            Parse parse = entry.getValue();
-            ParseStatus parseStatus = parse.getData().getStatus();
+          if (parseResult != null) {
+            for (Entry<Text, Parse> entry : parseResult) {
+              Text url = entry.getKey();
+              Parse parse = entry.getValue();
+              ParseStatus parseStatus = parse.getData().getStatus();
 
-            if (!parseStatus.isSuccess()) {
-              LOG.warn("Error parsing: " + key + ": " + parseStatus);
-              parse = parseStatus.getEmptyParse(getConf());
-            }
+              if (!parseStatus.isSuccess()) {
+                LOG.warn("Error parsing: " + key + ": " + parseStatus);
+                parse = parseStatus.getEmptyParse(getConf());
+              }
 
-            // Calculate page signature. For non-parsing fetchers this will
-            // be done in ParseSegment
-            byte[] signature = 
-              SignatureFactory.getSignature(getConf()).calculate(content, parse);
-            // Ensure segment name and score are in parseData metadata
-            parse.getData().getContentMeta().set(Nutch.SEGMENT_NAME_KEY, 
-                segmentName);
-            parse.getData().getContentMeta().set(Nutch.SIGNATURE_KEY, 
-                StringUtil.toHexString(signature));
-            // Pass fetch time to content meta
-            parse.getData().getContentMeta().set(Nutch.FETCH_TIME_KEY,
-                Long.toString(datum.getFetchTime()));
-            if (url.equals(key))
-              datum.setSignature(signature);
-            try {
-              scfilters.passScoreAfterParsing(url, content, parse);
-            } catch (Exception e) {
-              if (LOG.isWarnEnabled()) {
-                e.printStackTrace(LogUtil.getWarnStream(LOG));
-                LOG.warn("Couldn't pass score, url " + key + " (" + e + ")");
+              // Calculate page signature. For non-parsing fetchers this will
+              // be done in ParseSegment
+              byte[] signature = 
+                SignatureFactory.getSignature(getConf()).calculate(content, parse);
+              // Ensure segment name and score are in parseData metadata
+              parse.getData().getContentMeta().set(Nutch.SEGMENT_NAME_KEY, 
+                  segmentName);
+              parse.getData().getContentMeta().set(Nutch.SIGNATURE_KEY, 
+                  StringUtil.toHexString(signature));
+              // Pass fetch time to content meta
+              parse.getData().getContentMeta().set(Nutch.FETCH_TIME_KEY,
+                  Long.toString(datum.getFetchTime()));
+              if (url.equals(key))
+                datum.setSignature(signature);
+              try {
+                scfilters.passScoreAfterParsing(url, content, parse);
+              } catch (Exception e) {
+                if (LOG.isWarnEnabled()) {
+                  e.printStackTrace(LogUtil.getWarnStream(LOG));
+                  LOG.warn("Couldn't pass score, url " + key + " (" + e + ")");
+                }
               }
             }
+          } else {
+            byte[] signature = 
+              SignatureFactory.getSignature(getConf()).calculate(content, 
+                  new ParseStatus().getEmptyParse(conf));
+            datum.setSignature(signature);
           }
-        } else {
-          byte[] signature = 
-            SignatureFactory.getSignature(getConf()).calculate(content, 
-                new ParseStatus().getEmptyParse(conf));
-          datum.setSignature(signature);
         }
       }
 
